2004-02-09  Sebastien Pouliot  <sebastien@ximian.com>

	* PKCS1.cs: New. Copied from corlib. Required for RSAManaged.
	* RSAManaged.cs: New. Copied from corlib. Required for TLS - some
	parts (MD5SHA1) cannot work with the default RSACryptoServiceProvider.

2004-02-06  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoTools.cs: New. Copied from corlib to offer the sames services
	to symmetric algorithms in Mono.Security assembly.
	* KeyPairPersistance.cs: Provides a similar to CryptoAPI persistence 
	mechanism for keypairs (based on CspParameters).
	* SymmetricTransform.cs: New. Copied from corlib to offer the sames 
	services to symmetric algorithms in Mono.Security assembly.

2004-01-12  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoConvert.cs: RSA doesn't start with a Q - at least that what
	a strongname told me. Sorry Ron :(

2003-11-27  Sebastien Pouliot  <spouliot@videotron.ca>

	* MD4.cs: New. Asbtract class for all MD4 implementations. WARNING:
	The MD4 algorithm is BROKEN (collisions) and SHOULDN'T be used in 
	NEW designs. However some higher level algorithms (like NTLM) requires 
	MD4 (and may even be secure using it). YOU'RE WARNED!
	* MD4Managed.cs: New. Managed implementation of MD4 (RFC1320).
	* PKCS8.cs: New. Added Private-Key Information Syntax Standard as a 
	building block for PKCS12.

2003-10-30  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoConvert.cs: Fixed strongname generation for small exponents 
	(like 17). Part of the fixed for bug #50341.

2003-06-19  Nick Drochak <ndrochak@gol.com>

	* CryptoConvert.cs: Work around for mcs? bug 45127.

2003-03-07  Sebastien Pouliot  <spouliot@videotron.ca>

	* ARC4Managed.cs: New. Implementation of the Alleged RC4(tm)
	stream cipher in managed code (required for SSL/TLS).
	* CryptoConvert.cs: New. Helper class to help convert between
	Windows crypto structures and .NET crypto classes (required
	for security tools).
	* MD2.cs: New. Abstract class for all MD2 hash implementations.